Refactor HTML structure and update comments

--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
         </h1>
 
         <div class="hero-sub">
-          <span class="sub-tag">⚡ Network</span>
-          <span class="sub-tag">🌐 IoT</span>
-          <span class="sub-tag">🤖 AI</span>
-          <span class="sub-tag">💡 Tech Enthusiast</span>
-          <span class="sub-tag">🔌 Embedded Systems</span>
+          <span class="sub-tag">Network</span>
+          <span class="sub-tag">IoT</span>
+          <span class="sub-tag">AI</span>
+          <span class="sub-tag">Tech Enthusiast</span>
+          <span class="sub-tag">Embedded Systems</span>
         </div>
 
         <p class="hero-tagline">
@@ -120,9 +120,7 @@
   </section>
 
 
-  <!-- ============================================================
-       ABOUT ME SECTION
-  ============================================================ -->
+  <!-- ABOUT ME SECTION -->
   <section id="about">
     <div style="max-width:1100px; margin:0 auto;">
 
@@ -166,14 +164,14 @@
           </p>
 
           <div class="about-skills reveal">
-            <span class="skill-chip">React.js</span>
-            <span class="skill-chip">JavaScript</span>
+           <!-- <span class="skill-chip">React.js</span> 
             <span class="skill-chip">TypeScript</span>
+            <span class="skill-chip">Raspberry Pi</span> 
+            <span class="skill-chip">Node.js</span>-->
             <span class="skill-chip">HTML/CSS</span>
+            <span class="skill-chip">JavaScript</span>
             <span class="skill-chip">Arduino</span>
-            <span class="skill-chip">Raspberry Pi</span>
             <span class="skill-chip">Python</span>
-            <span class="skill-chip">Node.js</span>
             <span class="skill-chip">Networking</span>
             <span class="skill-chip">IoT</span>
           </div>
@@ -192,9 +190,7 @@
   </section>
 
 
-  <!-- ============================================================
-       STATS / QUICK OVERVIEW
-  ============================================================ -->
+  <!-- STATS / QUICK OVERVIEW -->
   <section id="stats">
     <div class="stats-grid">
 
@@ -225,9 +221,7 @@
   </section>
 
 
-  <!-- ============================================================
-       PORTFOLIO SHOWCASE SECTION
-  ============================================================ -->
+  <!-- PORTFOLIO SHOWCASE SECTION -->
   <section id="projects">
     <div style="max-width:1200px; margin:0 auto;">
 
@@ -309,7 +303,7 @@
           <div class="project-body">
             <div class="project-title">AI Crop Disease Detector</div>
             <p class="project-desc">
-              A machine learning–powered web app that identifies crop diseases from images captured
+              A machine learning-powered web app that identifies crop diseases from images captured
               by IoT field sensors. Helps farmers act faster.
             </p>
             <div class="project-tags">
@@ -418,9 +412,7 @@
   </section>
 
 
-  <!-- ============================================================
-       CERTIFICATES SECTION
-  ============================================================ -->
+  <!-- CERTIFICATES SECTION -->
   <section id="certificates">
     <div style="max-width:1100px; margin:0 auto;">
 
@@ -515,9 +507,7 @@
   </section>
 
 
-  <!-- ============================================================
-       CONTACT ME SECTION
-  ============================================================ -->
+  <!-- CONTACT ME -->
   <section id="contact">
     <div style="max-width:1000px; margin:0 auto;">
 
@@ -628,7 +618,7 @@
 
   <footer>
     <div class="footer-logo">D<span>.</span>Udoh</div>
-    <div>Copyright © 2026 XED. &middot;  All rights reserved. </div>
+    <div>Copyright © 2026 XED &middot;  All rights reserved. </div>
     <div>
       <a href="#hero" class="footer-back">Back to Top ↑</a>
     </div>
