--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                 <img src="David_Pic.JPG" alt="David Uduak Udoh">
             <!--
               Replace with actual photo:
-            -->
-            <div class="about-photo-placeholder">👨‍💻</div>
+          
+            <div class="about-photo-placeholder">👨‍💻</div> -->
             <div class="about-photo-tag">Front-End Developer</div>
           </div>
         </div>
@@ -176,7 +176,7 @@
           </div>
 
           <div class="about-cta reveal">
-             <a href="DAVID_UDUAK_UDOH_Resume.pdf" target="_blank" download="DAVID_UDUAK_UDOH_Resume.pdf" class="btn-primary">⬇ Download CV</a>
+             <a href="DAVID_UDUAK_UDOH_Resume.pdf" target="_blank" download="DAVID_UDUAK_UDOH_Resume.pdf" class="btn-primary">↓ Download CV</a>
             <a href="#projects" class="btn-outline">View Projects →</a>
           </div>
 
@@ -194,7 +194,7 @@
 
       <div class="stat-card reveal reveal-delay-1"
            onclick="document.getElementById('projects').scrollIntoView({behavior:'smooth'})">
-        <div class="stat-icon">🗂️</div>
+        <!-- <div class="stat-icon"></div> -->
         <div class="stat-count" data-target="12" data-suffix="+">0</div>
         <div class="stat-label">All Projects</div>
         <div class="stat-sublabel">Click to view portfolio →</div>
@@ -202,14 +202,14 @@
 
       <div class="stat-card reveal reveal-delay-2"
            onclick="document.getElementById('certificates').scrollIntoView({behavior:'smooth'})">
-        <div class="stat-icon">🏆</div>
+        <!-- <div class="stat-icon">🏆</div> -->
         <div class="stat-count" data-target="4" data-suffix="+">0</div>
         <div class="stat-label">Certificates</div>
         <div class="stat-sublabel">Click to view credentials →</div>
       </div>
 
       <div class="stat-card reveal reveal-delay-3">
-        <div class="stat-icon">⏳</div>
+        <!-- <div class="stat-icon">⏳</div> -->
         <div class="stat-count" data-target="3" data-suffix="+">0</div>
         <div class="stat-label">Years of Experience</div>
         <div class="stat-sublabel">In software &amp; hardware</div>
@@ -601,7 +601,7 @@
               ✓ Message sent! I'll get back to you shortly.
             </div>
 
-            <button type="submit" class="form-btn">Send Message ✈</button>
+            <button type="submit" class="form-btn">Send Message</button>
 
           </form>
         </div>
