--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           <div class="project-img">
             <img src="farmfeeder.png" alt="Livestock Farm Feeding System">
             <div class="project-overlay">
-              <a href="#" class="btn-sm btn-sm-primary" target="_blank">↗ Demo</a>
+              <a href="#" class="btn-sm btn-sm-primary" target="_blank">Demo</a>
               <a href="#" class="btn-sm btn-sm-ghost"   target="_blank">⌥ Code</a>
             </div>
           </div>
@@ -265,7 +265,7 @@
           <div class="project-img" style="background:linear-gradient(135deg,#0d1b2a,#1a3a5c)">
             <img src="myportfolio.png" alt="My portfolio">
             <div class="project-overlay">
-              <a href="#" class="btn-sm btn-sm-primary" target="_blank">↗ Demo</a>
+              <a href="#" class="btn-sm btn-sm-primary" target="_blank">Demo</a>
               <a href="#" class="btn-sm btn-sm-ghost"   target="_blank">⌥ Code</a>
             </div>
           </div>
@@ -293,7 +293,7 @@
           <div class="project-img" style="background:linear-gradient(135deg,#1a0a2e,#2d1060)">
             <img src="phoenixapp1.png" alt="Phoenix Travel App">
             <div class="project-overlay">
-              <a href="#" class="btn-sm btn-sm-primary" target="_blank">↗ Demo</a>
+              <a href="#" class="btn-sm btn-sm-primary" target="_blank">Demo</a>
               <a href="#" class="btn-sm btn-sm-ghost"   target="_blank">⌥ Code</a>
             </div>
           </div>
@@ -321,7 +321,7 @@
           <div class="project-img" style="background:linear-gradient(135deg,#0a1a0f,#0d3320)">
             <img src="agrochain.png" alt="AgroChain">
             <div class="project-overlay">
-              <a href="#" class="btn-sm btn-sm-primary" target="_blank">↗ Demo</a>
+              <a href="#" class="btn-sm btn-sm-primary" target="_blank">Demo</a>
               <a href="#" class="btn-sm btn-sm-ghost"   target="_blank">⌥ Code</a>
             </div>
           </div>
@@ -348,7 +348,7 @@
           <div class="project-img" style="background:linear-gradient(135deg,#1a100a,#3a2010)">
             <div class="project-img-placeholder">🛒</div>
             <div class="project-overlay">
-              <a href="#" class="btn-sm btn-sm-primary" target="_blank">↗ Demo</a>
+              <a href="#" class="btn-sm btn-sm-primary" target="_blank">Demo</a>
               <a href="#" class="btn-sm btn-sm-ghost"   target="_blank">⌥ Code</a>
             </div>
           </div>
@@ -377,7 +377,7 @@
           <div class="project-img" style="background:linear-gradient(135deg,#0a1520,#102840)">
             <div class="project-img-placeholder">🔐</div>
             <div class="project-overlay">
-              <a href="#" class="btn-sm btn-sm-primary" target="_blank">↗ Demo</a>
+              <a href="#" class="btn-sm btn-sm-primary" target="_blank">Demo</a>
               <a href="#" class="btn-sm btn-sm-ghost"   target="_blank">⌥ Code</a>
             </div>
           </div>
