--- a/index.html
+++ b/index.html
@@ -343,25 +343,24 @@
           </div>
         </div>
 
-        <!-- Project 5 
+        <!-- Project 5 -->
         <div class="project-card reveal reveal-delay-1">
           <div class="project-img" style="background:linear-gradient(135deg,#1a100a,#3a2010)">
-            <div class="project-img-placeholder">🛒</div>
+            <img src="eventxed.png" alt="EventXed">
             <div class="project-overlay">
               <a href="#" class="btn-sm btn-sm-primary" target="_blank">Demo</a>
               <a href="#" class="btn-sm btn-sm-ghost"   target="_blank">⌥ Code</a>
             </div>
           </div>
           <div class="project-body">
-            <div class="project-title">E-Commerce Platform</div>
+            <div class="project-title">EventXed Event Listing Website</div>
             <p class="project-desc">
-              A fully-featured e-commerce web app with product listings, cart, payments via Paystack,
-              and admin dashboard with analytics.
+              A responsive event listing website built with Javascript and CSS. The platform allows users to browse and search for local events, with integration for ticket purchases.
             </p>
             <div class="project-tags">
-              <span class="project-tag">Next.js</span>
-              <span class="project-tag">TypeScript</span>
-              <span class="project-tag">Tailwind</span>
+              <span class="project-tag">Javascript</span>
+              <span class="project-tag">CSS</span>
+              <span class="project-tag">HTML</span>
               <span class="project-tag">Paystack</span>
             </div>
             <div class="project-actions">
@@ -370,7 +369,7 @@
               <button class="btn-sm btn-sm-ghost">Details</button>
             </div>
           </div>
-        </div> -->
+        </div> 
 
         <!-- Project 6 
         <div class="project-card reveal reveal-delay-2">
@@ -430,8 +429,6 @@
             <div class="cert-year">2024</div>
           </div>
         </div>
-
-
 
         <!-- Certificate 2 -->
           <div class="cert-card reveal reveal-delay-1" onclick="openCertModal('Alx Virtual Assistant','Alx Africa','2025','Alx','virtual-assistant-certificate.jpeg')">
